# my-ihaskell

./: .gitignore  cabal.project  hie.yaml  ihaskell.cabal  stack.yaml
custom/hatex-extra/: CHANGELOG.md  hatex-extra.cabal
custom/hatex-extra/src/Text/LaTeX/: Helpers.hs
custom/hatex-extra/src/Text/LaTeX/Helpers/: Display.hs  List.hs  Placeholders.hs  Real.hs
custom/math-tools/: CHANGELOG.md  math-tools.cabal
custom/math-tools/src/Math/AD/: Real.hs
custom/math-tools/src/Math/AD/Data/: Bracketing.hs
custom/math-tools/src/Math/AD/Real/: BruteForce.hs  DynamicProgram.hs  FuncChain.hs  FuncDescription.hs  FuncDims.hs  Plots.hs  Properties.hs
custom/roel-base/: CHANGELOG.md  roel-base.cabal
custom/roel-base/src/Data/Traversable/: Enumerate.hs
ihaskell-display/ihaskell-hatex/: ihaskell-hatex.cabal
notebooks/: Conjugate Gradient.ipynb  IHaskell.ipynb  Naamloos.ipynb
notebooks/Mathematics For Industries/: Bracketing Experiments.ipynb  Tot zover met Joël.ipynb
